<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create_record"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="1"
        android:title="@string/create_record"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_user"
        android:icon="@drawable/change_user"
        android:orderInCategory="2"
        android:title="@string/change_user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="3"
        android:title="@string/change_settings"
        app:showAsAction="ifRoom" />

</menu>